--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta name="author" content="Denis Samardjiev"/>
-    <meta name="description" content="Rolla | Minimal Portfolio Template">
+    <meta name="Natascha Singer" content="Singer Natascha Portfolio"/>
+    <meta name="Natascha Singer" content="Art Multimedia Code">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Rolla | Minimal Portfolio Template</title>
+    <title>Natascha Singer | Art and Multimedia</title>
 
     <!-- Royal Preloader CSS -->
     <link href="css/lib/royal_preloader.css" rel="stylesheet">
@@ -63,7 +63,6 @@
                     <li><a href="#about" data-id="about" class="scroll-link">About</a></li>
                     <li><a href="#mixed-media" data-id="mixed-media" class="scroll-link">Multimedia</a></li>
                     <li><a href="#photography" data-id="photography" class="scroll-link">Photography</a></li>
-                    <li><a href="#services" data-id="services" class="scroll-link">Services</a></li>
                     <li><a href="#cv" data-id="cv" class="scroll-link">CV</a></li>
                     <li><a href="#map" data-id="map" class="scroll-link">Contact</a></li>
                 </ul>
@@ -75,53 +74,21 @@
 </header>
 <!-- End Header -->
 
-<!-- Begin Jumbotron -->
-<div id="home" style="background-color:transparent;padding:150px 0;" class="jumbotron parallax-window"
-     data-parallax="scroll" data-image-src="images/slide-1.jpg">
-    <div class="container">
-        <div class="row">
-            <!-- Content -->
-            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-7 col-lg-offset-0">
-                <div class="top-content bottomReveal">
-                    <h2 class="text-white">Art & Code</h2>
-                    <span class="divider"></span>
-                    <p class="text-white">I am a munich based interdisciplinary artist, web developer and painter.
-                        Fascinated by the intersection of humans and technology and with great love for travel, nature
-                        and photography I am always searching for the next adventure.
-                    </p>
-                    <p class="no-margin">
-                        <a class="btn btn-clear btn-lg scroll-link" data-id="about" href="#about"
-                           role="button">About</a>
-                </div>
-            </div><!-- /.column -->
-        </div><!-- /.row -->
-    </div><!-- /.container -->
-</div>
-<!-- End Jumbotron -->
-
-
 <!-- Begin About -->
 <section id="about" class="section-padding section-border-bottom">
     <div class="container">
         <!-- Title -->
-        <div class="row mb60">
-            <div class="col-xs-12 text-center">
-                <h2></h2>
-                <span class="divider divider-center divider-dark no-margin-bottom"></span>
-            </div><!-- /.column -->
-        </div><!-- /.row -->
-
         <!-- Row 1 - Information / ProfilePicture / Main Services -->
         <div class="row mb40">
             <!-- Profile Picture -->
-            <div class="col-sm-12 col-md-3 col-lg-3 leftReveal">
+            <div class="col-sm-6 col-md-3 col-lg-3">
                 <img src="images/about/profile.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
 
 
             </div><!-- /.column -->
 
             <!-- Information -->
-            <div class="col-sm-8 col-md-9 col-lg-9 mt40-xs mt40-sm topReveal">
+            <div class="col-sm-12 col-md-9 col-lg-9 mt40-xs mt40-sm">
                 <h3 class="mb20">Hello World - I’m Natascha!</h3>
                 <p class="mb20">Since I was a small child I loved painting and maths. Over the time this changed into a
                     fascination for the fast pacing technology which is drastically changing our society - and art with
@@ -187,7 +154,7 @@
         <!-- Title -->
         <div class="row mb50">
             <div class="col-sm-12 col-md-6 col-md-offset-3 text-center filter-button-group">
-                <h2>Work</h2>
+                <h2>Multimedia</h2>
                 <span class="divider divider-center divider-dark mb30"></span>
                 <span>Filter :</span>
                 <ul class="list-work-filter list-unstyled list-inline">
@@ -203,9 +170,9 @@
         <!-- Masonry Portfolio -->
         <div class="row grid">
             <img class="template-item" src="images/preview/multimedia/1.jpeg" data-template="galleryItem"
-                 data-classes="painting digital" data-heading="Demoglied" data-description="Dictatorship"/>
+                 data-classes="painting" data-heading="Demoglied" data-description="Dictatorship"/>
             <img class="template-item" src="images/preview/multimedia/2.jpeg" data-template="galleryItem"
-                 data-classes="painting digital" data-heading="Demoglied" data-description="Democracy"/>
+                 data-classes="digital" data-heading="Demoglied" data-description="Democracy"/>
             <img class="template-item" src="images/preview/multimedia/3.jpeg" data-template="galleryItem"
                  data-classes="digital" data-heading="Preception" data-description="digital collage"/>
             <img class="template-item" src="images/preview/multimedia/4.jpeg" data-template="galleryItem"
@@ -213,10 +180,10 @@
             <img class="template-item" src="images/preview/multimedia/5.jpeg" data-template="galleryItem"
                  data-classes="digital painting" data-heading="female" data-description="digital collage"/>
             <img class="template-item" src="images/preview/multimedia/6.jpeg" data-template="galleryItem"
-                 data-classes="digital painting" data-heading="image of man"
-                 data-description="video installation for Kunsthalle Munich"/>
+                 data-classes="digital painting" data-heading="female 2"
+                 data-description="digital collage"/>
             <img class="template-item" src="images/preview/multimedia/7.jpg" data-template="galleryItem"
-                 data-classes="digital painting" data-heading="female 2" data-description="digital collage"/>
+                 data-classes="digital painting" data-heading="image of man" data-description="video installation for Kunsthalle Munich"/>
             <img class="template-item" src="images/preview/multimedia/8.jpg" data-template="galleryItem"
                  data-classes="painting" data-heading="image of man"
                  data-description="video installation for Kunsthalle Munich"/>
@@ -629,117 +596,12 @@
             </div><!-- /.column -->
         </div><!-- /.row -->
 
-        <!-- Form -->
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <form data-toggle="validator" id="contactForm" name="contactForm">
-                    <!-- Subject -->
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <div class="controls">
-                                    <input class="form-control" data-error="This section is required."
-                                           id="msg_subject" placeholder="Subject *" required="" type="text">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                        </div><!-- /.column -->
-                    </div><!-- /.row -->
-
-                    <!-- Name -->
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <div class="controls">
-                                    <input class="form-control" data-error="This section is required." id="name"
-                                           placeholder="Your Name *" required="" type="text">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                        </div><!-- /.column -->
-                    </div><!-- /.row -->
-
-                    <!-- Email -->
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <div class="controls">
-                                    <input class="email form-control" data-error="This section is required." id="email"
-                                           placeholder="Email *" required="" type="email">
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                        </div><!-- /.column -->
-                    </div><!-- /.row -->
-
-                    <!-- Message -->
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <div class="controls">
-                                    <textarea class="form-control" data-error="This section is required." id="message"
-                                              placeholder="Message *" required="" rows="5"></textarea>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Confirmed -->
-                    <div class="row">
-                        <div class="col-sm-12 text-center">
-                            <div id="msgSubmit" class="h4 hidden"></div>
-                        </div><!-- /.column -->
-                    </div>
-
-                    <!-- Button -->
-                    <div class="row">
-                        <div class="col-sm-12 text-center">
-                            <button type="submit" id="submit" class="btn btn-primary btn-lg">Send</button>
-                        </div><!-- /.column -->
-                    </div><!-- /.row -->
-                </form><!-- /.form -->
-            </div><!-- /.column -->
-        </div><!-- /.row -->
+      <div>
+         <p class="contact-text"> If you like to say hello to me,  <a href="mailto:mail@nataschasinger.de">drop me a line!</a></p>
+      </div>
     </div><!-- /.container -->
 </section>
 <!-- End Contact -->
-
-<!-- Start Contact Information -->
-<section id="contact-information">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 text-center leftReveal">
-                <span class="dark-icon mb5 pe-7s-home"></span>
-                <h5 class="no-margin-bottom spaced">12 Street, New York, NY</h5>
-            </div><!-- /.column -->
-
-            <div class="col-sm-4 mt30-xs text-center bottomReveal">
-                <span class="dark-icon mb5 pe-7s-phone"></span>
-                <h5 class="no-margin-bottom spaced">+1 213 726 4431</h5>
-            </div><!-- /.column -->
-
-            <div class="col-sm-4 mt30-xs text-center topReveal">
-                <span class="dark-icon mb5 pe-7s-plug"></span>
-                <h5 class="no-margin-bottom spaced">info@rolla.com</h5>
-            </div><!-- /.column -->
-        </div><!-- /.row -->
-    </div><!-- /.container -->
-</section>
-<!-- End Contact Information -->
-
-<!-- Start Footer -->
-<footer class="page-footer">
-    <div class="container">
-        <!-- Contact Information -->
-        <div class="row">
-            <div class="col-md-12 text-center">
-                &copy; 2016 <a href="#">Rolla</a>. All Rights Reserved.
-            </div><!-- /.column -->
-        </div><!-- /.row -->
-    </div><!-- /.container -->
-</footer>
-<!-- End Footer -->
 
 <!-- Javascript Files -->
 <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
@@ -750,7 +612,7 @@
 <script type="text/javascript" src="js/lib/parallax.min.js"></script>
 
 <script id="gallery-item-template" type="text/x-handlebars-template">
-    <div class="col-md-4 {{classes}}">
+    <div class="col-md-4 col-sm-6 {{classes}}">
         <a href="{{srcFullImage}}" class="zoom">
             <div class="grid-item">
                 <div class="overlay">
